# combinatorial_optimization

./: README.md  pyproject.toml
docs/: aggregator_plan.md  bkv.md  code_improvements.md  formulation.md  implementation_plan.md  parameters.md  problem_definition.md  reference_report.md  resumo_do_trabalho.md  run_M1.sh  run_M2.sh  run_M3.sh  solver_setup.md  specification.md  test_division.md  test_plan.md
report/: aggregated.json  main.tex  referencias.bib
report/tables/: T1_baseline.csv  T1_baseline.md  T1_degenerate.csv  T1_degenerate.md  T1_tuned.csv  T1_tuned.md  T2_cplex.csv  T2_cplex.md  T2_highs.csv  T2_highs.md
results/metaheuristica/deterministic/all/A1_tenure-01/: config.json  oma01_tabu.jsonl  oma02_tabu.jsonl  oma03_tabu.jsonl  oma04_tabu.jsonl  oma05_tabu.jsonl  oma06_tabu.jsonl  oma07_tabu.jsonl  oma08_tabu.jsonl  oma09_tabu.jsonl  oma10_tabu.jsonl
results/metaheuristica/deterministic/all/A1_tenure-03/: config.json  oma01_tabu.jsonl  oma02_tabu.jsonl  oma03_tabu.jsonl  oma04_tabu.jsonl  oma05_tabu.jsonl  oma06_tabu.jsonl  oma07_tabu.jsonl  oma08_tabu.jsonl  oma09_tabu.jsonl  oma10_tabu.jsonl
results/metaheuristica/deterministic/all/A1_tenure-05/: config.json  oma01_tabu.jsonl  oma02_tabu.jsonl  (+8 more)
scripts/: run_M2.sh  run_M3.ps1  run_all.sh  run_deterministic.sh
src/oma/: greedy.py  instance.py  logger.py  main.py  solve.py  solver.py  tabu_search.py
src/oma/analysis/: __init__.py  aggregate.py  bkv.py  load.py  plots.py  report.py
src/oma/metaheuristica/: greedy.py  tabu_search.py
src/oma/solvers/: __init__.py  generic.py  model.py
(+585 files in other folders)
