[project]
name = "oma"
version = "0.1.0"
description = "OMA - Tabu"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "highspy>=1.14.0",
    "matplotlib>=3.9.0",
    "pulp>=3.3.2",
]

[project.scripts]
oma = "oma.main:main"
oma-report = "oma.analysis.report:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oma"]
